started to add writing functionality to the main code and started readingTest

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,3 +4,10 @@
 /Writer.class
 /Configuration_test
 /configuration
+/Menu$2.class
+/Menu$3.class
+/Menu$4.class
+/Menu$5.class
+/Menu$6.class
+/readerTest.class
+/ReadFromFileUsingScanner.class
