Draw lines with mouse implemented. Needs appropriate z-order.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,17 +1,21 @@
-/Menu$1.class
-/Menu.class
-/Reader.class
-/Writer.class
 /Configuration_test
-/configuration
+/Menu$1.class
 /Menu$2.class
 /Menu$3.class
 /Menu$4.class
 /Menu$5.class
 /Menu$6.class
-/readerTest.class
-/ReadFromFileUsingScanner.class
-/Maps/
-/maps/
 /Menu$7.class
+/Menu.class
+/Reader.class
+/Writer.class
+/readerTest.class
+/LineDrawer.class
+/Line.class
+/Line$1.class
+/Line$2.class
 /Menu$8.class
+/SaveCoordinates.class
+/Menu$10.class
+/Menu$9.class
+/Menu$11.class
