Finished the readerTester: parse and save data. Need to check saved data

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,17 +1,19 @@
-/Menu$1.class
-/Menu.class
-/Reader.class
-/Writer.class
 /Configuration_test
-/configuration
+/Menu$1.class
 /Menu$2.class
 /Menu$3.class
 /Menu$4.class
 /Menu$5.class
 /Menu$6.class
-/readerTest.class
-/ReadFromFileUsingScanner.class
-/Maps/
-/maps/
 /Menu$7.class
-/Menu$8.class
+/Menu.class
+/Reader.class
+/Writer.class
+/readerTest.class
+/readerTest$Building.class
+/Buildings.class
+/LinesComponent$Line.class
+/LinesComponent.class
+/Buildings$points.class
+/Buildings$Points.class
+/Buildings$Walls.class
