--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,30 @@
+/Configuration_test
+/Line.class
 /Main$1.class
 /Main.class
+/Menu$1.class
+/Menu$10.class
 /Menu$11.class
 /Menu$12.class
+/Menu$2.class
+/Menu$3.class
+/Menu$4.class
+/Menu$5.class
+/Menu$6.class
+/Menu$7.class
+/Menu$8.class
+/Menu$9.class
+/Menu$TreeDropDownRenderer.class
+/Menu.class
+/Reader.class
+/Resources/
+/SaveCoordinates.class
 /Tree.class
+/Walls.class
+/Writer.class
+/Question.class
+/Input/
+/Menu$13.class
+/Menu$15.class
+/Menu$14.class
+/TestCreator.class
